# simple-game

./: Cargo.toml  README.md
assets/characters/: dynamic_asset.assets.ron
config/: rooms.ron
src/: character.rs  main.rs  player.rs  states.rs
src/actions/: control.rs
src/map/: interactable.rs  mod.rs  room.rs
