[package]
name = "simple-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy_asset_loader = { version = "0.17.0", features = ["2d", "standard_dynamic_assets"] }
bevy_rapier2d = { version = "0.22.0", features = ["debug-render-2d"] }
log = "0.4.20"
ron = "0.8.1"
serde = { version = "1.0.190", features = ["derive"] }

[profile.dev.package.bevy_rapier2d]
opt-level = 3
